# LinkCutter

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_project_version.py
alembic/versions/: f9b11fc2a63e_initial_migration.py
app/: main.py
app/api/: lifespan.py
app/api/endpoints/: __init__.py  default.py  get_short_urls.py
app/api/endpoints/v1/: __init__.py  set_short_urls.py  short_urls_handles.py
app/api/schemas/: __init__.py
app/core/: config.py  logger.py  logger_config.py
app/database/core/: __init__.py  database.py
app/database/models/: models.py
app/schemas/: __init__.py  url_schema.py
app/services/: __init__.py  shortener.py  url_service.py
locustfiles/: README.md  locust.py  seed_db.py  short_link_creater.py  urls_for_locust.txt
