[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "LinkCutter"
version = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "pip>=26.1.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[tool.hatch.build.targets.wheel]
packages = ["admin", "api", "common"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
